# predixy

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  build.sh
.github/workflows/: main.yml  release.yml
.githun/workflows/: main.yml
conf/: auth.conf  cluster.conf  command.conf  command.conf.sample  dc.conf  latency.conf  predixy.conf  sentinel.conf  standalone.conf  try.conf
doc/: Config-description-for-Redis-cluster.md  ReleaseNotes.md  config_CN.md  config_KR.md
doc/bench/redis/: benchmark_with_redis_CN.md
package/predixy_1.0.5-1_amd64/DEBIAN/: control  postinst
package/predixy_1.0.5-1_amd64/lib/systemd/system/: predixy.service  predixy.target
src/: AcceptConnection.cpp  AcceptConnection.h  AcceptSocket.cpp  AcceptSocket.h  Alloc.cpp  Alloc.h  Auth.cpp  Auth.h  Backtrace.h  Buffer.cpp  Buffer.h  ClusterNodesParser.cpp  ClusterNodesParser.h  ClusterServerPool.cpp  ClusterServerPool.h  Command.cpp  Command.h  Common.h  Conf.cpp  Conf.h  ConfParser.cpp  ConfParser.h  ConnectConnection.cpp  ConnectConnection.h  ConnectConnectionPool.cpp  ConnectConnectionPool.h  ConnectSocket.cpp  ConnectSocket.h  Connection.cpp  Connection.h  Crc16.cpp  DC.cpp  DC.h  Deque.h  Distribution.cpp  Distribution.h  Enums.cpp  Enums.h  EpollMultiplexor.cpp  EpollMultiplexor.h  (+57 more)
test/: basic.py  pubsub.py
